# CMakeLists-Demo

Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  phone.c
Demo2/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
Demo3/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cipher_main.c  cmake_install.cmake
Demo3/cipher/: CMakeLists.txt  Makefile  cmake_install.cmake
Demo4/: configure.scan  pp
Demo4/cipher/: CMakeLists.txt  main
Demo5/: CMakeLists.txt
Demo6/: test
